--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <button class="arrows"></button>            
             <div class="miniConteiner">
-                <p>Хочу преобрести</p>
+                <p>Хочу приобрести</p>
                 <div class="buttonMenu"> 
                     <button class="rightCurrency colorButRight">RUB</button>
                     <button class="rightCurrency colorButRight buttonColor">USD</button>
